// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Container overview 1 snapshot 1`] = `
<DocumentFragment>
  <div
    class="css-r9zh5k"
  >
    Container text
  </div>
</DocumentFragment>
`;

exports[`Container overview 2 snapshot 1`] = `
<DocumentFragment>
  <div
    class="css-17d693n"
  >
    Container text
  </div>
</DocumentFragment>
`;

exports[`Container overview 3 snapshot 1`] = `
<DocumentFragment>
  <div
    class="css-8toaxq"
  >
    Container text
  </div>
</DocumentFragment>
`;

exports[`Container overview 4 snapshot 1`] = `
<DocumentFragment>
  <div
    class="css-17d693n"
  >
    Container text
  </div>
</DocumentFragment>
`;

exports[`Container overview 5 snapshot 1`] = `
<DocumentFragment>
  <div
    class="css-r9zh5k"
  >
    Container text
  </div>
</DocumentFragment>
`;
